# Cheezy-Launcher

./: README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: build.yml  test-build.yml
src/: App.jsx  BrowseMods.jsx  ManageGMLoader.jsx  ManageMods.jsx  PluginHost.jsx  PluginsTab.jsx  SettingsTab.jsx  pathUtils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
