[package]
name = "cheezy-launcher"
version = "0.0.1"
description = "A Mod Launcher made for Pizza Tower"
authors = ["Aness6040"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cheezy_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vfs = "0.12.2"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
walkdir = "2"
tauri-plugin-single-instance = "2.4.0"
zip = "8.3.0"
sevenz-rust = "0.6.1"
reqwest = "0.13.2"
tokio = "1.50.0"
steamlocate = "2.0.1"
tauri-plugin-dialog = "2.6.0"

[build]
incremental = true

